noinst_LTLIBRARIES = libndnvideo.la

libndnvideo_la_SOURCES = \
	ccnx.c \
	packet_generator.c \
	repo_publisher.c

#libndnvideo_la_CFLAGS  = -std=c99 -Wall -Wextra -Winvalid-pch -Wstrict-prototypes
#libndnvideo_la_CFLAGS += -Wmissing-prototypes -Wshadow -fdiagnostics-show-option
#libndnvideo_la_CFLAGS += -Wno-unknown-pragmas
